# explore_programming

./: .gitignore  README.md
archive/arduino/: README.md
archive/qmk/: README.md
archive/shell/: README.md
arduino/: README.md
brainfuck/: README.md
brainfuck/compiler/: Cargo.toml
brainfuck/interpreter/: Cargo.toml
c++/c++_notes/: compile.sh
c++/todo_list/: CMakeLists.txt  io_elements.hpp  list_elements.hpp  main.cpp
c++/todo_list/io_elements/: cli_io.hpp
c++/todo_list/list_elements/: list_item.hpp  list_section.hpp  todo_list.hpp
c/c_notes/: compile.sh
c/notes/: compile_c_to_asm.md
c_c++/: README.md
c_c++/c/: README.md
c_c++/c++/: README.md
compiled/c/: README.md
compiled/elixir/: README.md
elixir/elixir_guide_book/: README.md
erlang/: README.md
fortran/book/: compile.sh
fortran/fortran_tutorial/: basic_data_types.f90  basic_io.f90  fortrantut.f90
go/book/: compile.sh
haskell/: README.md
haskell/book/: compile.sh
haskell/learnyouahaskell/: README.md
julia/book/: compile.sh
papers/: README.md
papers/paper_list/: computability_and_lampda_definability-turing.txt  practical_forms_of_type_theory-turing.txt
papers/src/: bib_cs.bib  compile.sh  example_1.tex  example_2.tex  note_collection.tex
programs/: README.md
programs/speed_comparison/: README.md
python/: README.md
python/book/: compile.sh
python/neural_network/: or_logic_gate.py  or_logic_gate_hidden.py  sigmoid_function.py  virus_symptoms.py
qmk/: README.md
qmk/source/: keymap.c
rust/: README.md
rust/notes/: 00_header.md  (+12 more)
shell/: README.md
(+217 files in other folders)
